让placeholderapi变成硬依赖 把两个粒子效果的todo删了，没必要 新增placeholderapicondition用于比较玩家的变量