@@ -12,7 +12,6 @@ import think.rpgitems.power.Property;
 import think.rpgitems.power.PropertyHolder;
 
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Meta(marker = true)
@@ -63,7 +62,7 @@ public class EquipmentCondition extends BaseCondition<Void> {
             List<ItemStack> itemStacks = Stream.concat(
                     Arrays.stream(player.getInventory().getArmorContents()),
                     Stream.of(player.getInventory().getItemInMainHand(), player.getInventory().getItemInOffHand())
-            ).collect(Collectors.toList());
+            ).toList();
             if (matchAllSlot) {
                 return itemStacks.stream().allMatch(this::match) ? PowerResult.ok() : PowerResult.fail();
             } else {
@@ -72,29 +71,15 @@ public class EquipmentCondition extends BaseCondition<Void> {
         } else {
             int matches = 0;
             for (EquipmentSlot sl : slots) {
-                ItemStack s;
-                switch (sl) {
-                    case HAND:
-                        s = player.getInventory().getItemInMainHand();
-                        break;
-                    case OFF_HAND:
-                        s = player.getInventory().getItemInOffHand();
-                        break;
-                    case FEET:
-                        s = player.getInventory().getBoots();
-                        break;
-                    case LEGS:
-                        s = player.getInventory().getLeggings();
-                        break;
-                    case CHEST:
-                        s = player.getInventory().getChestplate();
-                        break;
-                    case HEAD:
-                        s = player.getInventory().getHelmet();
-                        break;
-                    default:
-                        throw new IllegalStateException();
-                }
+                ItemStack s = switch (sl) {
+                    case HAND -> player.getInventory().getItemInMainHand();
+                    case OFF_HAND -> player.getInventory().getItemInOffHand();
+                    case FEET -> player.getInventory().getBoots();
+                    case LEGS -> player.getInventory().getLeggings();
+                    case CHEST -> player.getInventory().getChestplate();
+                    case HEAD -> player.getInventory().getHelmet();
+                    default -> throw new IllegalStateException();
+                };
                 if (match(s)) matches += 1;
             }
             if (matchAllSlot && matches == slots.size()) {
@@ -119,7 +104,7 @@ public class EquipmentCondition extends BaseCondition<Void> {
         }
         Optional<RPGItem> stackItem = ItemManager.toRPGItem(stack);
         if (rpgitem != null) {
-            if (!stackItem.isPresent()) {
+            if (stackItem.isEmpty()) {
                 return false;
             }
             try {
